<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Monokrome</string>
    <string name="download">Download</string>
    <string name="preview">Preview</string>
    <string name="read">Read</string>
    <string name="resume">Resume</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading</string>
    <string name="terms_of_usage"><u>By joining you agree to the Terms of Service and Privacy Policy</u></string>
    <string name="search">Search</string>
    <string name="filter_list">Filter</string>
    <string name="network_down">Network Not Available</string>
    <string name="banner_text">Unable to connect to server please check your internet connection.</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="close">CLOSE</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_online">Back Online</string>
    <string name="free">Free</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="art">Art</string>
    <string name="description">Description</string>
    <string name="log_in_dialog_text">Logging in…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="join_now">Join now</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="credentials_error_massage">An error happened please check your credentials and try again.</string>
    <string name="retry">Retry</string>
    <string name="oops">Oops!</string>
    <string name="connectivity_error_message">Please check you connectivity.</string>
    <string name="email_error_message">Please enter a valid Email</string>
    <string name="password_empty_error_message">Please Enter Password</string>
    <string name="repeat_password_error_message">Please Repeat Password</string>
    <string name="register_dialog_text">Registering…</string>
    <string name="invalid_repeated_password">The repeated password is invalid</string>
    <string name="most_recent">Most Recent</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="message_subscribe_failed" translatable="false">Failed to subscribe to topic</string>
    <string name="message_subscribed" translatable="false">Subscribed to topic</string>
    <string name="new_edition_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="new_edition_notification_channel_name" translatable="true">New edition</string>
    <string name="new_edition_notification_channel_description" translatable="true">This channel holds the notification that gets sent whenever a new magazine edition is released.</string>
    <string name="new_edition_title">New edition is released</string>
    <string name="new_edition_description">Go check it out!</string>
    <string name="upload">Upload</string>
    <string name="uploading">Uploading…</string>
    <string name="drawer_message_error">you can\'t perform this action.</string>
    <string name="ok">OK</string>
    <string name="general_error">Something Wrong Happened.</string>
    <string name="internal_server_error">Internal Server Error.</string>
    <string name="error_connection_abort" translatable="false">Software caused connection abort</string>
    <string name="password_length_error_message">Password must be at least 5 characters long</string>
    <string name="repeated_password_match_error">Does not match password</string>
    <string name="custom_error_email_registered">There is already an account with this email.</string>
    <string name="custom_error_email_does_not_exist">No account with given email.</string>
    <string name="custom_invalid_password">invalid password</string>
    <string name="download_error_message">A download error happened.</string>
    <string name="waiting">Waiting…</string>
    <string name="pause">Pause</string>
    <string name="monokrome_art_magazine">MONOKROME Art Magazine</string>
    <string name="monokrome_art_magazine_le_chez_soi_des_artistes">MONOKROME Art Magazine the home of artists.</string>
    <string name="publisheb_by">Published by MONOKROME</string>
    <string name="about">About</string>
    <string name="about_text">Monokrome is an independent Algerian digital cultural magazine that intends to democratize Art in its plurality and among all.
 Founded in 2018 on the initiative of Nour Taieb Ezzraimi and Idris Felfoul, the magazine now brings together 7 permanent column heads and reaches on social networks nearly 7,000 individuals living around the world. With its quarterly publications on languages offered in collegiality, the magazine also regularly publishes in the portfolio and interviews sections and in the blog in four (English, Arabic, Spanish, French), articles working to promote artists and projects in order to give them access to a publication space and offer the greatest number of people the possibility of obtaining information about culture and current art.</string>
    <string name="developers">Developers</string>
    <string name="developers_name">This app was developed by Sedik Ikediche and Soheib Bettahar.</string>
    <string name="contact">Contact</string>
    <string name="sedik_email" translatable="false">ikediche08@gmail.com</string>
    <string name="soheib_email" translatable="false">soheibbett@gmail.com</string>
    <string name="write_title_here">Write title here</string>
    <string name="write_description_here">Write description here</string>
    <string name="edition">EDITION</string>
    <string name="click_here_to_add_edition">Click here to add edition</string>
    <string name="_13_sep_219" translatable="false">13 Sep 219</string>
    <string name="version" translatable="false">Version : 1.0.0</string>
    <string name="intall_file_manager">You need to install a file manager app.</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="website">Website</string>
    <string name="contact_us">Contact Us</string>
    <string name="admin">Admin</string>
    <string name="communication">Communication</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="log_out">Log Out</string>
    <string name="general_terms_and_conditions">GENERAL TERMS AND CONDITIONS</string>
    <string name="general_terms_and_conditions_introduction">By installing the app, you agree to be bound by these terms of use. Please review them carefully before installation and/or Signing-in.</string>
    <string name="definitions">1. Definitions</string>
    <string name="definitions_text">The App shall mean Monokrome Magazine, to offer services related to reading and purchasing digital content, to be used on Android devices and any upgrades from time to time and any other software documentation which ebables the use of the app.</string>
    <string name="data_protection">2. Data Protection</string>
    <string name="data_protection_text">Any Personal information you supply to Monokrome Magazine when using the App will be used by Monokrome Magazine in accordance with its Privacy Policy.</string>
    <string name="the_app">3. The App</string>
    <string name="the_app_text">The App may allow you to access certain functionnalities available on Monokrome Magazine website. Such access will be governed by the Monokrome Magazine Website Terms of Use.</string>
    <string name="proprietary_rights_and_licence">4. Proprietary Rights and Licence</string>
    <string name="proprietary_rights_and_licence_text">All trade marks, content, images, and other intellectual property rights of any nature in the App are owned directly either by Monokrome Magazine or Monokrome Magazine\'s licensors.</string>
    <string name="conditions_of_use">6. Conditions of Use</string>
    <string name="conditions_of_use_text_1">6.1. You will not, nor allow third parties on your behalf to:</string>
    <string name="conditions_of_use_text_2">a- make and distribute copies of the App.\nb- attempt to copy, reproduce, alter, modify, reverse, engineer, of translate the App.\nc- Create derivative works of the App of any kind whatsoever.</string>
    <string name="conditions_of_use_text_3">6.2. The App is currently made available to you free of charge for your personal, non-commercial use.</string>
    <string name="conditions_of_use_text_4">Monokrome Magazine reserves the right to amend or withdraw the App or charge for the App or service provided to you in accordance with these Terms of Use at any time and for any reason.</string>
    <string name="availability">6. Availability</string>
    <string name="availability_text">7.1 This App is available to handheld mobile devices running Android.</string>
    <string name="availability_text_2">Monokrome Magazine will use reasonable efforts to make the App available at all times. However you acknowledge the app is provided on the internet and on mobile networks, so the quality and availability of the app may be affected by factors outside Monokrome\'s reasonable control.</string>
    <string name="availability_text_3" tools:ignore="Typos">7.2 Monokrome Magazine does not take any responsibility whatsoever:</string>
    <string name="availability_text_4">for unavailability of the App or any difficulty or inability to download of access content or any other communication system failure which may result in the App being unavailable.</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="privacy_policy_text">This page is used to inform the app users regarding our policies with the collection, use, and disclosure of Personal information. If you choose to use our service, then you agree to the collection and use of information in relation to this policy.</string>
    <string name="information_and_collection_use">1. Information and collection use</string>
    <string name="information_and_collection_use_text">For a better experience, The app uses following third party services that may collect general usage information:\nGoogle Play Services\nFirebase</string>
    <string name="security">2. Security</string>
    <string name="security_text">We value your trust in providing us your personal information, thus we are striving to use acceptable means of protecting it. But remember that no method of transmission over the internet, of method of electronic storage is 100% secure and reliable, and we can\'t guarantee its absolute security.</string>
    <string name="links_to_other_sites">3. Links to other sites</string>
    <string name="links_to_other_sites_text">These services may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or the practices of any third party sites or services.</string>
    <string name="changes_to_privacy_policy">4. Changes to privacy policy</string>
    <string name="changes_to_privacy_policy_text">We may upgrade our Privacy Policy from time to time. Thus you are advised to review this page periodically for any for any changes. We will notify you on any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
</resources>