<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <group
        android:id="@+id/information_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/about_us"
            android:title="@string/about_us"
            android:icon="@drawable/ic_info"/>
        <item
            android:id="@+id/rate_us"
            android:title="@string/rate_us"
            android:icon="@drawable/ic_rate"/>
    </group>

    <item
        android:id="@+id/admin"
        android:title="@string/admin">
        <menu>
            <group
                android:id="@+id/admin_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/upload"
                    android:icon="@drawable/ic_upload"
                    android:title="@string/upload" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/communication"
        android:title="@string/communication">

        <menu>
            <group
                android:id="@+id/communication_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/web_site"
                    android:icon="@drawable/ic_web_site"
                    android:title="@string/website" />
                <item
                    android:id="@+id/facebook"
                    android:icon="@drawable/ic_facebook"
                    android:title="@string/facebook" />
                <item
                    android:id="@+id/instagram"
                    android:icon="@drawable/ic_instagram"
                    android:title="@string/instagram" />
                <item
                    android:id="@+id/contact_us"
                    android:icon="@drawable/ic_contact"
                    android:title="@string/contact_us" />
            </group>
        </menu>

    </item>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"/>
    </group>



</menu>